assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Muli:300,400,500,700|Quicksand:300,400,500,600&display=swap');


/* BODY STYLING */

*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Quicksand", sans-serif;
  background-image: linear-gradient(to left, #859398, #37415f);
  min-height: 100vh;
  padding-top: 50px;
}

/* WEATHER FORECAST */

.outlook-container {  
  display: flex;
  flex-direction: column;
  position: relative;
  margin: 0 auto;
  width: 98vw;
  max-width: 500px;
  padding: 8px 12px;
  background-color: #edf0f1;
  box-shadow: 1px 1px 3px rgba(44, 62, 80, 0.30);
  border-radius: 5px;
}

.date {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  height: 50px;
  line-height: 50px;
  padding-left: 15px;
  font-size: 1.0rem;
  letter-spacing: 1px;
  color: #293251;
}

.outlook-content-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 50px;
  background-color: #fff;
  border-radius: 5px;
  box-shadow: 0px 1px 3px rgba(44, 62, 80, 0.30);
}

.location p {
  display: flex;
  align-items: center;
  margin: 0;
  height: 50px;
  color: #293251;
  font-size: 1.2rem;
  font-weight: 400;
  letter-spacing: 1.0px;
  text-transform: uppercase;
}

.error-notification p {
  display: flex;
  width: 250px;
  margin: auto;
  align-items: center;
  justify-content: center;
  height: 50px;
  font-size: 0.9rem;
  text-align: center;
  padding: 0 8px;
  background-color: #f8d7da;
  color: #721c24;
}

.weather-container {
  display: flex;
  flex-direction: row;
  color: #5f4037;
}

.temp-container {
  height: 50px;
  padding-right: 15px;
  margin-left: 5px;
}

.temperature p {
  height: 30px;
  padding-top: 4px;
  color: #293251;
  font-size: 1.2rem;
  text-align: center;
  cursor: pointer;  
}

.min-max-temp p {
  height: 20px;
  color: #293251;
  font-size: 0.7rem;
  text-align: center;
}

.weather-icon {
  height: 50px;
}

.weather-icon img {
  text-align: center;
}

.weather-description {
  color: #293251;
  text-align: center;
  font-size: 1.0rem;
  text-transform: capitalize;
}

@media (max-width: 540px) {
  body {
    padding-top: 0;
  }

  .date {
    padding-left: 7px;
    letter-spacing: 0;
  }

  .location {
    letter-spacing: 0.25px;
    margin-left: 3px;
  }

  .error-notification p {
    width: 170px;
  }
  
  .temp-container {
    padding-right: 7px;
  }

  div.min-max-temp {
    display: none;
  }

  div.temperature {
    height: 50px;
  }

  div.temperature p {
    height: 50px;
    display: flex;
    align-items: center;
    padding-top: 0;
  }
}


/* TASK TRACKER */

.todo-container {
  display: flex;
  flex-direction: column;
  position: relative;
  margin: 40px auto 0 auto;
  width: 98vw;
  max-width: 500px;
  background-color: #edf0f1;
  border-radius: 10px;
}

header {
  width: 100%;
  min-height: 80px;
  padding: 15px;
  background-color: #4d758f;
  border-radius: 10px;
  position: relative;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
}

#input {
  font-size: 1.1rem;
  font-family: Quicksand, sans-serif;
  color: #fff;
  background-color: #8ca9b1;
  width: 100%;
  height: 50px;
  float: left;
  padding: 0 50px 0 0;
  text-indent: 15px;
  border: none;
  position: relative;
  z-index: 1;
  border-radius: 25px;
}

#input::placeholder {
  color: #fff;
}

#input:focus {
  background-color: #8ca9b1;
  outline: none;
}

.input-btn {
  position: absolute;
  float: right;
  height: 50px;
  width: 50px;
  top: 15px;
  right: 15px;
  font-size: 1.3rem;
  cursor: pointer;
  color: #8ca9b1;
  z-index: 2;
  outline: none;
  border: none;
  background-color: #fff;
  border-radius: 25px;
}

ul {
  width: 100%;
  float: left;
  list-style: none;
  border-radius: 0 0 10px 10px;
  padding: 0 15px;
}

li {
  width: 100%;
  min-height: 40px;
  line-height: 40px;
  font-size: 1.1rem;
  background-color: #fff;
  border-radius: 5px;
  margin: 10px 0;
  padding-left: 12px;
  box-shadow: 0px 1px 3px rgba(44, 62, 80, 0.30);
}

span {
  position: relative;
  z-index: 0;
}

span.text:focus {
  display: inline-block;
  border: 1px solid #e5e5e5;
  box-shadow: 1px 1px 1px rgba(44, 62, 80, 0.10);
  width: 60%;
  margin: 0;
  padding-left: 10px;
  min-height: 30px;
  line-height: 30px;
  font-size: 1.1rem;
  font-family: Quicksand, sans-serif;
  background-color: #fff;
  border-radius: 5px;
  outline: none;
}

.trash {
  min-height: 40px;
  line-height: 40px;
  margin-right: 3px;
  text-align: center;
  float: right;
  font-size: 18px;
  color: #b97068;
  width: 0;
  transition: 0.2s linear;
  opacity: 0;
  cursor: pointer;
}

.edit {
  min-height: 40px;
  line-height: 40px;
  text-align: center;
  float: right;
  position: relative;
  z-index: 4;
  font-size: 18px;
  color: #61799cc9;
  width: 0;
  transition: 0.2s linear;
  opacity: 0;
  cursor: pointer;
}

li:hover .trash,
li:hover .edit {
  width: 30px;
  opacity: 1.0;
  
}

.check {
  min-height: 40px;
  line-height: 40px;
  font-size: 20px;
  float: right;
  position: relative;
  /* z-index: 2; */
  text-align: center;
  line-height: 40px;
  margin-right: 10px;
  cursor: pointer;
}

.save {
  min-height: 40px;
  line-height: 40px;
  font-size: 22px;
  text-align: center;
  float: right;
  position: relative;
  z-index: 3;
  color: #61799cc9;
  margin-right: 10px;
  cursor: pointer;
  display: none;
}

.display-save {
  display: inline-block;
}

i.fa-circle {
  color: #b5b5b5;
}

i.fa-check-circle {
  color: rgb(51, 126, 51); 
}

.linethrough {
  text-decoration: line-through;
  color: rgb(150, 146, 146);
}

@media (max-width: 540px) {
  .todo-container {
    margin-top: 10px;
  }
}

/* BULK DELETE BUTTONS */

.delete-buttons {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  justify-content: space-around;
  margin: 0 auto 25px auto;
  max-width: 500px;
}

.delete-completed {
  width: 200px;
  /* margin: 0 auto; */
  line-height: 25px;
  padding: 2px 10px;
  text-align: center;
  margin-top: 15px;
  color: #fff;
  box-shadow: 0px 1px 3px rgba(44, 62, 80, 0.30);
  font-size: 0.9rem;
  opacity: 0.6;
  background-color: #6f778a;
  border-radius: 6px;
  cursor: pointer;
  display: none;
}

.reset {
  width: 200px;
  line-height: 25px;
  /* margin: 0 auto; */
  padding: 2px 10px;
  text-align: center;
  margin-top: 15px;
  color: #fff;
  box-shadow: 0px 1px 3px rgba(44, 62, 80, 0.30);
  font-size: 0.9rem;
  opacity: 0.6;
  background-color: #6f778a;
  border-radius: 10px;
  cursor: pointer;
  display: none;
}

.display-btn {
  display: block;
}

.noDisplay {
  display: none;
}

/* DELETE BUTTON MODALS */

div.tingle-modal {
  background-color: #2c2c2ccb;
}

.todo-modal .tingle-modal-box {
  display: flex;
  flex-direction: column;
  width: 96vw;
  min-width: 100px;
  max-width: 500px;
  margin: 0 auto;
  margin-top: 150px;
  padding: 10px;
  border-radius: 10px;
  background-color: #fff;
  box-shadow: 1px 1px 4px rgba(44, 62, 80, 0.30);
}

div.tingle-modal-box__content {
  padding: 25px 10px;
}

.todo-modal h1 {
  font-size: 1.5em;
  padding-left: 0;
  font-weight: normal;
  letter-spacing: 1px;
}

div.todo-modal div.tingle-modal-box__footer {
  width: 100%;
  padding: 10px;
  border-radius: 10px;
  background-color: #edf0f1;
  box-shadow: 1px 1px 4px rgba(44, 62, 80, 0.30);
  justify-content: space-between;
}

.todo-modal .tingle-btn {
  padding: 10px 20px;
  border-radius: 10px;
  font-size: 1.2em;
  letter-spacing: 1px;
  box-shadow: 1px 2px 4px rgba(44, 62, 80, 0.30);
}

button.tingle-btn--primary {
  background-color: #4d758f;
  margin: 0;
}

button.tingle-btn--default {
  background-color: #8a6d70;
  /* margin: 0; */
}

@media (max-width: 540px) {
  button.tingle-btn.tingle-btn--primary {
    margin: 0.5rem 0;
  }

  button.tingle-btn.tingle-btn--default {
    margin: 0.5rem 0;
  }

  span.tingle-modal__closeLabel {
    font-family: inherit;
    font-weight: normal;
    letter-spacing: 2px;
  }
}

